d_none exchanged through d-none; text-overflow in contact-email corrected

--- a/style/contacts.css
+++ b/style/contacts.css
@@ -62,6 +62,8 @@
     border-radius: 10px;
     cursor: pointer;
     gap: 15px;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .contact-card:hover {
@@ -76,7 +78,6 @@
     color: #007CEE;
 }
 
-
 .contact-card.selected {
     background-color: var(--primary);
 }
@@ -88,7 +89,6 @@
 .contact-card.selected .contact-email {
     color: #007CEE;
 }
-
 
 .contact-avatar {
     width: 42px;
@@ -108,6 +108,7 @@
 .contact-info-container {
     flex-grow: 1;
     margin-left: 10px;
+    overflow: hidden;
 }
 
 .contact-name {
@@ -115,14 +116,12 @@
     margin-bottom: 5px;
 }
 
-
-
-
 .contact-email {
     color: #30aae0;
     margin: 5px 0;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
-
 
 .contacts-list-wrapper {
     margin-top: 20px;
@@ -259,8 +258,6 @@
     visibility: visible;
 }
 
-
-
 .add-contact-popup {
     position: relative;
     width: 1212px;
@@ -275,11 +272,6 @@
 
 .add-contact-popup.closing {
     animation: slideOutToRight 0.5s ease forwards;
-}
-
-
-.d_none {
-    display: none
 }
 
 .add-contact-header {
@@ -460,23 +452,12 @@
         font-weight: 700;
     }
 
-    .contact-card {
-        text-overflow: ellipsis;
-        overflow: hidden;
-    }
-
-    .contact-info-container {
-        overflow: hidden;
-    }
-
     .contacts-container {
         overflow-x: hidden;
     }
 
     .contact-email {
         font-size: 16px;
-        text-overflow: ellipsis;
-        overflow: hidden;
     }
 
     .contacts-headline-top {
@@ -517,7 +498,7 @@
     }
 
     .add-contact-popup.closing {
-    animation: slideOutToBottom 0.5s ease forwards;
+        animation: slideOutToBottom 0.5s ease forwards;
     }
 
     .add-contact-avatar {
@@ -654,11 +635,11 @@
     }
 
     .contact-details.animate {
-    animation: none;
+        animation: none;
     }
 
     .button-details {
-    display: none;
+        display: none;
     }
 
     .button-drop {
@@ -720,7 +701,7 @@
 
     #created-contact.closing .created-contact-popup {
     animation: slideInAndOutRes 2s ease-in-out forwards !important;
-}
+    }
 
     .created-contact-popup {
         margin-top: 20px;
@@ -748,12 +729,11 @@
         background: rgba(0, 0, 0, 0.1);
         margin: 0 10px;
         border-radius: 12px;
-}
+    }
 
     .contacts-container {
         width: 100%;
     }
-
     }
 
 
@@ -794,9 +774,6 @@
         #button-drop-menu {
         margin-right: 0px;
     }
-
-
-
     }
 
 
@@ -829,7 +806,6 @@
         font-size: 15px;
     }
 
-
     .inputs {
         gap: 15px;
     }
@@ -849,23 +825,22 @@
 
     }
 
-
     .add-contact-buttons {
-    margin-top: 22px;
-}
+        margin-top: 22px;
+    }
 
-.contact-details-name {
+    .contact-details-name {
         font-size: 28px;
     }
 
-        .contact-details-avatar {
+    .contact-details-avatar {
         width: 70px;
         height: 70px;
         font-size: 28px;
         margin-right: 0;
     }
 
-        .button-drop {
+    .button-drop {
         margin-top: 205px;
     }
 }
